fix all to be run

--- a/01.quickstart.ipynb
+++ b/01.quickstart.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -10,27 +10,17 @@
      "output_type": "stream",
      "text": [
       "---------- TextMessage (user) ----------\n",
-      "hello\n",
-      "---------- TextMessage (weather_agent) ----------\n",
-      "Hello! How can I assist you today?\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/andy/works/ai/autogen04-sample/.venv/lib/python3.11/site-packages/autogen_agentchat/agents/_assistant_agent.py:981: UserWarning: Resolved model mismatch: gpt-4o-2024-08-06 != gpt-4o-2024-11-20. Model mapping in autogen_ext.models.openai may be incorrect. Set the model to gpt-4o-2024-11-20 to enhance token/cost estimation and suppress this warning.\n",
-      "  model_result = await model_client.create(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "서울날씨\n",
+      "---------- ToolCallRequestEvent (weather_agent) ----------\n",
+      "[FunctionCall(id='call_AXCW7iN6n4D21k7Shxkq5rdw', arguments='{\"city\":\"서울\"}', name='get_weather')]\n",
+      "---------- ToolCallExecutionEvent (weather_agent) ----------\n",
+      "[FunctionExecutionResult(content='The weather in 서울 is 73 degrees and Sunny.', name='get_weather', call_id='call_AXCW7iN6n4D21k7Shxkq5rdw', is_error=False)]\n",
+      "---------- ToolCallSummaryMessage (weather_agent) ----------\n",
+      "The weather in 서울 is 73 degrees and Sunny.\n",
       "---------- TextMessage (user) ----------\n",
-      "hello\n",
+      "\n",
       "---------- TextMessage (weather_agent) ----------\n",
-      "Hi again! How can I help you?\n"
+      "The current weather in Seoul is 73 degrees and sunny. If you need more information or have any other questions, feel free to ask!\n"
      ]
     }
    ],
@@ -48,8 +38,9 @@
     "api_version = os.getenv(\"AZURE_OPENAI_API_VERSION\")\n",
     "api_key = os.getenv(\"AZURE_OPENAI_API_KEY\")\n",
     "azure_endpoint = os.getenv(\"AZURE_OPENAI_ENDPOINT\")\n",
+    "deployment_name = os.getenv(\"AZURE_OPENAI_DEPLOYMENT_NAME\")\n",
     "azure_openai_chat_completion_client = AzureOpenAIChatCompletionClient(\n",
-    "            model=\"gpt-4o\",\n",
+    "            model=deployment_name,\n",
     "            azure_endpoint=azure_endpoint,\n",
     "            api_version=api_version,\n",
     "            api_key=api_key,\n",
@@ -87,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +266,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "autogen04-sample",
    "language": "python",
    "name": "python3"
   },
